--- a/TraditionalTestsV1/.eslintrc.json
+++ b/TraditionalTestsV1/.eslintrc.json
@@ -4,7 +4,8 @@
         "es6": true
     },
     "extends": [
-        "eslint:recommended"
+        "eslint:recommended",
+        "plugin:node/recommended"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -30,6 +31,9 @@
         "semi": [
             "error",
             "always"
+        ],
+        "node/no-unsupported-features/es-syntax": [
+            "off"
         ]
     }
 }
