--- a/TraditionalTestsV1/package.json
+++ b/TraditionalTestsV1/package.json
@@ -9,13 +9,14 @@
     "rimraf": "^3.0.2"
   },
   "devDependencies": {
-    "cypress": "^4.7.0",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
+    "cypress": "^4.7.0",
     "eslint": "^7.1.0",
     "eslint-plugin-cypress": "^2.11.1",
     "eslint-plugin-json-format": "^2.0.1",
-    "eslint-plugin-mocha": "^7.0.0"
+    "eslint-plugin-mocha": "^7.0.0",
+    "eslint-plugin-node": "^11.1.0"
   },
   "scripts": {
     "cy:open": "cypress open",
